--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ title: swiftly.run
 description: >- # this means to ignore newlines until "baseurl:"
   Swiftly get going (again) with Python, Docker, curl and many other useful tools.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://swiftly.run" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://swiftly.run" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: 
 github_username:  moppermonster
 
